# chat_ui_v2

./: .gitignore  pyproject.toml
agents/ebook_agent/: extract_text.py
config/: resources.yaml
src/: __init__.py  config_loader.py  logger_config.py  rag_pipeline.py  retriever.py  utils.py
src/agent/: agent_configs.py  base_agent.py  prompt_template.py  rag_tools.py  tools.py
src/core/llms/: __init__.py  base.py  factory.py
src/core/prompt_templates/: basic_template.txt  jinja_format.py  loader.py  phi4_template.j2  registry.py
src/embedder/: __init__.py  image_embedder.py  table_embedder.py  text_embedder.py
src/indexing/: __init__.py  base_indexer.py  indexing.py  metadata_aware_indexing.py  simple_text_indexing.py
src/llama_index/: embedder.py  index.py
src/llama_index/llms/: factory.py
src/llama_index/loaders/: epub_loader.py
src/llama_index/rag_pipelines/: simple_rag.py
src/llama_index/text_splitters/: __init__.py
src/llms/: __init__.py  base.py  factory.py  utils.py
src/loaders/: base_loader.py  epub_loader.py  epub_loader_langchain.py  pdf_loader.py  web_loader.py
src/prompt_templates/: basic_template.txt  jinja_format.py  loader.py  registry.py
src/vectorstore/: __init__.py  base.py  faiss_store.py  json_debug_vector_store.py  pinecone_store.py
ui/: config_settings.py  main.py  mock_llm_server.py  test_app.py  test_app_with_frontend.py
ui/config/: settings.py
ui/events/: startup.py
ui/routes/: agent.py  auth.py  chat.py  config.py  settings.py  ui.py  upload.py
ui/static/simple_layout/: docManager.js  fileUploadHandler.js  login.css  script.js  style.css  textareaHandler.js  toggleButton.js  utils.js
ui/templates/: base.html  login.html
ui/templates/components/: form.html  sidebar.html
