[project]
name = "chat-ui-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Yash Kushwaha",email = "37941798+YashKushwaha@users.noreply.github.com"}
]

requires-python = ">=3.10,<3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "openai (>=1.78.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib (>=1.7.4,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "faiss-gpu (>=1.7.2,<2.0.0)",
    "pinecone (>=6.0.2,<7.0.0)",
    "ebooklib (>=0.19,<0.20)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "chromadb (>=1.0.9,<2.0.0)",
    "llama-index (>=0.12.35,<0.13.0)",
    "llama-index-vector-stores-chroma (>=0.4.1,<0.5.0)",
    "llama-index-embeddings-huggingface (>=0.5.4,<0.6.0)",
    "llama-index-vector-stores-faiss (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
